--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,8 @@ buildNumber.properties
 .history
 .ionide
 
+## Test
+dscommerce/src/test/*
+
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,visualstudiocode,eclipse
+
